Fixed lasagna alignment

--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ body {
 .img-responsive{
     width: 100%;
     height: auto;
-    object-fit: cover;
-    object-position: bottom;
+   
 }
 h3, h4 {
     font-size: 25px;
